Mon Sep  6 11:03:13 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Fixed wrong check of missing functions. Patch by Adrian Quark.
	  ref #3400
	  The patch contains following comment:
	    This patch should avoid unnecessary incompatibility with future
	    versions of Openssl.  Changes suggested by bmaher_at_amazon.com.

Mon Sep  6 10:31:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_s_get_line_buffer):
	  Readline.line_buffer should return locale string.
	  [ruby-dev:42184] #3791

Sat Sep  4 23:48:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_readlink): symlink target should be in
	  filesystem encoding.

Wed Sep  1 14:33:36 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_zip): fix typo of rdoc.
	  patched by Andrei Kulakov [ruby-core:31974]

Wed Sep  1 12:56:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_suppress_tracing): restore the state and invoke
	  the func with normal state.  a patch from Satoshi Shiba <shiba
	  AT rvm.jp> at [ruby-dev:42162].  [ruby-core:31783]

Tue Aug 31 17:32:34 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/stubs.c: fix [Bug #3771] "VC++ can't make ext/tk with enabling
	  stubs". Thanks, Akio Tajima [ruby-dev:42159].

Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): dregexp has literal string only at the head
	  and successors are array.  [ruby-core:32682]

Tue Aug 10 11:26:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/un.rb (httpd): SIGQUIT and SIGHUP are not guaranteed to exist.

Sat Aug 14 17:48:41 2010  Narihiro Nakamura  <authorNari@gmail.com>

	* test/objspace/test_objspace.rb: added test for objspace.

	* ext/objspace/objspace.c: considers T_ZOMBIE by lazy sweep GC.

	* gc.c: considers that dsize was 0. [ruby-dev:42022]

Tue Aug 31 03:42:14 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): fix bug in r29146.